@@ -446,6 +446,10 @@ PHP 8.4 UPGRADE NOTES
   . The IntlDateFormatter class exposes now the new PATTERN constant
     reflecting udat api's UDAT_PATTERN.
 
+- LDAP:
+  . LDAP_OPT_X_TLS_PROTOCOL_MAX.
+  . LDAP_OPT_X_TLS_PROTOCOL_TLS1_3.
+
 - OpenSSL:
   . X509_PURPOSE_OCSP_HELPER.
   . X509_PURPOSE_TIMESTAMP_SIGN.
