@@ -1,5 +1,5 @@
 /* This is a generated file, edit the .stub.php file instead.
- * Stub hash: fec87d81c21ac5d56e62a5e0b4bbe673ea76edd5 */
+ * Stub hash: bd41c14d3e28c21238365a28d1ee9806521719af */
 
 #if defined(HAVE_ORALDAP)
 ZEND_BEGIN_ARG_WITH_RETURN_OBJ_TYPE_MASK_EX(arginfo_ldap_connect, 0, 0, LDAP\\Connection, MAY_BE_FALSE)
@@ -753,6 +753,12 @@ static void register_ldap_symbols(int module_number)
 #endif
 #if defined(LDAP_OPT_X_TLS_PROTOCOL_MIN)
 	REGISTER_LONG_CONSTANT("LDAP_OPT_X_TLS_PROTOCOL_TLS1_2", LDAP_OPT_X_TLS_PROTOCOL_TLS1_2, CONST_PERSISTENT);
+#endif
+#if defined(LDAP_OPT_X_TLS_PROTOCOL_TLS1_3)
+	REGISTER_LONG_CONSTANT("LDAP_OPT_X_TLS_PROTOCOL_TLS1_3", LDAP_OPT_X_TLS_PROTOCOL_TLS1_3, CONST_PERSISTENT);
+#endif
+#if defined(LDAP_OPT_X_TLS_PROTOCOL_MAX)
+	REGISTER_LONG_CONSTANT("LDAP_OPT_X_TLS_PROTOCOL_MAX", LDAP_OPT_X_TLS_PROTOCOL_MAX, CONST_PERSISTENT);
 #endif
 #if defined(LDAP_OPT_X_TLS_PACKAGE)
 	REGISTER_LONG_CONSTANT("LDAP_OPT_X_TLS_PACKAGE", LDAP_OPT_X_TLS_PACKAGE, CONST_PERSISTENT);
